Fix scroll on add card page so save button is fully visible on mobile

--- a/src/pages/AddCardPage.module.css
+++ b/src/pages/AddCardPage.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   min-height: 100dvh;
   background: var(--color-background);
-  padding-bottom: var(--space-8);
+  padding-bottom: calc(var(--nav-height) + var(--space-6));
 }
 
 @media (min-width: 600px) {
